# cictapis

./: .gitignore  CMakeLists.txt  WORKSPACE  apischema.json  defs.bzl  protobuf2swagger.config.js
.github/workflows/: proto.yaml
cict/common/v1/: BUILD.bazel  annotations.proto  config.proto  crud_policy.proto  enum_crud_policy.proto  enum_locale.proto  enum_mask_behavior.proto  enum_mutate_operation.proto  enum_rpc_handle_status.proto  enum_system_api_exporter.proto  enum_system_role.proto  error_locale.proto  locale.proto  md_wrapper.proto  message_slim.proto  paginate.proto  queue_format.proto  translation.proto  user_slim.proto
cict/service-academic/v1/: BUILD.bazel  acronym.proto  auth_bridge.proto  campus.proto  category.proto  class.proto  course.proto  department.proto  education_program.proto  enum_academic_classification.proto  enum_auth_bridge_type.proto  enum_category_type.proto  enum_course_status.proto  enum_gender.proto  enum_staff_status.proto  enum_student_status.proto  enum_study_period.proto  error_locale.proto  faculty.proto  locale.proto  major.proto  process_point.proto  process_score.proto  semester.proto  semester_final_point.proto  specilization.proto  staff.proto  student.proto  student_course.proto  subject.proto  type_of_education.proto
cict/service-auth/v1/: BUILD.bazel  enum_authenticate_third_party.proto  enum_scope.proto  enum_scope_role.proto  enum_system_role.proto  enum_user_status.proto  error_locale.proto  facade.proto  insecure_ca_tunnel.proto  license_scope.proto  locale.proto  md_wrapper.proto  organization_accessor.proto  profile.proto  propagation_cache.proto  role_accessibility.proto  scope.proto  secure.proto  session.proto  session_manager.proto  translation.proto  user.proto  user_slim.proto  workspace.proto  workspace_user.proto
cict/service-course/v1/: BUILD.bazel  course.proto  course_field.proto  course_timetable.proto  course_timetable_day.proto  course_timetable_week.proto  error_locale.proto  exam_schedule.proto  exam_score.proto  locale.proto
cict/service-dormitory/v1/: BUILD.bazel  registration_form.proto  user.proto
cict/service-file-uploader/v1/: BUILD.bazel  error_locale.proto  file.proto  locale.proto  uploader.proto
cict/service-gateway/v1/: BUILD.bazel  enum_kafka_topic.proto  error_locale.proto  kafka_message.proto  locale.proto  publisher.proto
cict/service-mail/v1/: BUILD.bazel  enum_built_in_template.proto  error_locale.proto  file_slim.proto  locale.proto  mail.proto  template.proto
cict/service-notification/v1/: BUILD.bazel  error_locale.proto  locale.proto  notification.proto
cict/service-reporter/v1/: BUILD.bazel  reporter.proto  template.proto
dart/: Makefile
doc/: WORKSPACE
doc/cict/common/v1/: BUILD.bazel
doc/cict/service-auth/v1/: BUILD.bazel
doc/cict/service-course/v1/: BUILD.bazel
doc/cict/service-dormitory/v1/: BUILD.bazel
envoy/: BUILD.bazel
go/: WORKSPACE
go/cict/common/v1/: BUILD.bazel
go/cict/service-academic/v1/: BUILD.bazel
go/cict/service-auth/v1/: BUILD.bazel
go/cict/service-course/v1/: BUILD.bazel
go/cict/service-dormitory/v1/: BUILD.bazel
go/cict/service-file-uploader/v1/: BUILD.bazel
go/cict/service-gateway/v1/: BUILD.bazel
go/cict/service-mail/v1/: BUILD  BUILD.bazel
go/cict/service-notification/v1/: BUILD.bazel
go/cict/service-reporter/v1/: BUILD.bazel
go/google/api/: BUILD.bazel
go/grpc/lb/v1/: BUILD.bazel
google/api/: BUILD.bazel  annotations.proto  http.proto
grpc-gateway/: WORKSPACE
grpc-gateway/cict/common/v1/: BUILD.bazel
grpc-gateway/cict/service-auth/v1/: BUILD.bazel
grpc-gateway/cict/service-course/v1/: BUILD.bazel
grpc-gateway/cict/service-dormitory/v1/: BUILD.bazel
grpc/lb/v1/: BUILD.bazel  load_balancer.proto
java/: WORKSPACE
java/cict/common/v1/: BUILD.bazel
java/cict/service-academic/v1/: BUILD.bazel
java/cict/service-auth/v1/: BUILD.bazel
java/cict/service-course/v1/: BUILD.bazel
java/cict/service-dormitory/v1/: BUILD.bazel
java/cict/service-file-uploader/v1/: BUILD.bazel
java/cict/service-gateway/v1/: BUILD.bazel
java/cict/service-mail/v1/: BUILD.bazel
java/cict/service-notification/v1/: BUILD.bazel
java/cict/service-reporter/v1/: BUILD.bazel
java/google/api/: BUILD.bazel
java/grpc/lb/v1/: BUILD.bazel
support/json/: cict_common_v1_json_doc.json  cict_service_auth_v1_json_doc.json  cict_service_course_v1_json_doc.json  cict_service_dormitory_v1_json_doc.json
support/md/: cict_common_v1_markdown_doc.md  cict_service_auth_v1_markdown_doc.md  cict_service_course_v1_markdown_doc.md  cict_service_dormitory_v1_markdown_doc.md
swagger/common/v1/: annotations.swagger.json  config.swagger.json  crud_policy.swagger.json  paginate.swagger.json
swagger/service-auth/v1/: enum_authenticate_third_party.swagger.json  enum_system_role.swagger.json  profile.swagger.json  session.swagger.json  user.swagger.json
swagger/service-course/v1/: course.swagger.json  course_field.swagger.json  course_timetable.swagger.json  course_timetable_day.swagger.json  course_timetable_week.swagger.json  exam_schedule.swagger.json  exam_score.swagger.json
swagger/service-dormitory/v1/: registration_form.swagger.json  user.swagger.json
