load("//:defs.bzl", "proto_descriptor")

proto_descriptor(
  name = "cict_proto_descriptor",
  srcs = [
    "//google/api:annotations.proto",
    "//google/api:http.proto",

    "//cict/common/v1:annotations.proto",
    "//cict/common/v1:config.proto",
    "//cict/common/v1:enum_crud_policy.proto",
    "//cict/common/v1:enum_mask_behavior.proto",
    "//cict/common/v1:enum_mutate_operation.proto",
    "//cict/common/v1:enum_system_api_exporter.proto",
    "//cict/common/v1:locale.proto",
    "//cict/common/v1:paginate.proto",

    "//cict/service-auth/v1:enum_authenticate_third_party.proto",
    "//cict/service-auth/v1:enum_system_role.proto",
    "//cict/service-auth/v1:enum_user_status.proto",
    "//cict/service-auth/v1:license_scope.proto",
    "//cict/service-auth/v1:organization_accessor.proto",
    "//cict/service-auth/v1:profile.proto",
    # SessionService serve internal cluster's services, do not export in envoy proxy
    # "//cict/service-auth/v1:session.proto",
    "//cict/service-auth/v1:user_slim.proto",
    "//cict/service-auth/v1:user.proto",

    "//cict/service-course/v1:course_field.proto",
    "//cict/service-course/v1:course_timetable_day.proto",
    "//cict/service-course/v1:course_timetable_week.proto",
    "//cict/service-course/v1:course_timetable.proto",
    "//cict/service-course/v1:course.proto",
    "//cict/service-course/v1:exam_schedule.proto",
    "//cict/service-course/v1:exam_score.proto",

    "//cict/service-dormitory/v1:registration_form.proto",
    "//cict/service-dormitory/v1:user.proto",
  ],
  out = "cict.descriptor",
  external_deps = [
    "well_known_protos"
  ]
)
