load("//:defs.bzl", "proto_descriptor")

proto_descriptor(
  name = "cict_proto_descriptor",
  srcs = [
    "//google/api:annotations.proto",
    "//google/api:http.proto",

    "//cict/common/v1:annotations.proto",
    "//cict/common/v1:config.proto",
    "//cict/common/v1:enum_crud_policy.proto",
    "//cict/common/v1:enum_mask_behavior.proto",
    "//cict/common/v1:error_locale.proto",
    "//cict/common/v1:paginate.proto",

    "//cict/service-auth/v1:enum_scope_role.proto",
    "//cict/service-auth/v1:enum_scope.proto",
    "//cict/service-auth/v1:enum_user_status.proto",
    "//cict/service-auth/v1:error_locale.proto",
    "//cict/service-auth/v1:locale.proto",
    "//cict/service-auth/v1:propagation_cache.proto",
    "//cict/service-auth/v1:role_accessibility.proto",
    "//cict/service-auth/v1:scope.proto",
    "//cict/service-auth/v1:session.proto",
    "//cict/service-auth/v1:user.proto",
    "//cict/service-auth/v1:workspace_user.proto",
    "//cict/service-auth/v1:workspace.proto",

    "//cict/service-course/v1:course_field.proto",
    "//cict/service-course/v1:course_timetable_day.proto",
    "//cict/service-course/v1:course_timetable_week.proto",
    "//cict/service-course/v1:course_timetable.proto",
    "//cict/service-course/v1:course.proto",
    "//cict/service-course/v1:exam_schedule.proto",
    "//cict/service-course/v1:exam_score.proto",

    "//cict/service-dormitory/v1:registration_form.proto",
    "//cict/service-dormitory/v1:user.proto",

    "//cict/service-file-uploader/v1:error_locale.proto",
    "//cict/service-file-uploader/v1:file.proto",
    "//cict/service-file-uploader/v1:locale.proto",

    "//cict/service-mail/v1:enum_built_in_template.proto",
    "//cict/service-mail/v1:error_locale.proto",
    "//cict/service-mail/v1:locale.proto",
    "//cict/service-mail/v1:mail.proto",
    "//cict/service-mail/v1:template.proto",

    "//cict/service-notification/v1:error_locale.proto",
    "//cict/service-notification/v1:locale.proto",
    "//cict/service-notification/v1:notification.proto",
  ],
  out = "cict.descriptor",
  external_deps = [
    "well_known_protos"
  ]
)
