load("//:defs.bzl", "proto_descriptor")

proto_descriptor(
  name = "cict_proto_descriptor",
  srcs = [
    "//google/api:annotations.proto",
    "//google/api:http.proto",

    "//cict/common/v1:annotations.proto",
    "//cict/common/v1:config.proto",
    "//cict/common/v1:enum_crud_policy.proto",
    "//cict/common/v1:enum_mask_behavior.proto",
    "//cict/common/v1:enum_rpc_handle_status.proto",
    "//cict/common/v1:error_locale.proto",
    "//cict/common/v1:paginate.proto",

    "//cict/service-academic/v1:acronym.proto",
    "//cict/service-academic/v1:auth_bridge.proto",
    "//cict/service-academic/v1:campus.proto",
    "//cict/service-academic/v1:class.proto",
    "//cict/service-academic/v1:course.proto",
    "//cict/service-academic/v1:department.proto",
    "//cict/service-academic/v1:education_program.proto",
    "//cict/service-academic/v1:enum_academic_classification.proto",
    "//cict/service-academic/v1:enum_course_status.proto",
    "//cict/service-academic/v1:enum_gender.proto",
    "//cict/service-academic/v1:enum_staff_status.proto",
    "//cict/service-academic/v1:enum_student_status.proto",
    "//cict/service-academic/v1:enum_study_period.proto",
    "//cict/service-academic/v1:error_locale.proto",
    "//cict/service-academic/v1:faculty.proto",
    "//cict/service-academic/v1:locale.proto",
    "//cict/service-academic/v1:major.proto",
    "//cict/service-academic/v1:process_point.proto",
    "//cict/service-academic/v1:semester_final_point.proto",
    "//cict/service-academic/v1:semester.proto",
    "//cict/service-academic/v1:specilization.proto",
    "//cict/service-academic/v1:staff.proto",
    "//cict/service-academic/v1:student_course.proto",
    "//cict/service-academic/v1:student.proto",
    "//cict/service-academic/v1:subject.proto",
    "//cict/service-academic/v1:type_of_education.proto",

    "//cict/service-auth/v1:enum_scope_role.proto",
    "//cict/service-auth/v1:enum_scope.proto",
    "//cict/service-auth/v1:enum_user_status.proto",
    "//cict/service-auth/v1:error_locale.proto",
    "//cict/service-auth/v1:locale.proto",
    "//cict/service-auth/v1:propagation_cache.proto",
    "//cict/service-auth/v1:role_accessibility.proto",
    "//cict/service-auth/v1:scope.proto",
    "//cict/service-auth/v1:session_manager.proto",
    "//cict/service-auth/v1:session.proto",
    "//cict/service-auth/v1:user.proto",
    "//cict/service-auth/v1:workspace_user.proto",
    "//cict/service-auth/v1:workspace.proto",

    "//cict/service-file-uploader/v1:error_locale.proto",
    "//cict/service-file-uploader/v1:file.proto",
    "//cict/service-file-uploader/v1:locale.proto",

    "//cict/service-gateway/v1:enum_kafka_topic.proto",
    "//cict/service-gateway/v1:error_locale.proto",
    "//cict/service-gateway/v1:kafka_message.proto",
    "//cict/service-gateway/v1:locale.proto",

    "//cict/service-mail/v1:enum_built_in_template.proto",
    "//cict/service-mail/v1:error_locale.proto",
    "//cict/service-mail/v1:locale.proto",
    "//cict/service-mail/v1:mail.proto",
    "//cict/service-mail/v1:template.proto",

    "//cict/service-notification/v1:error_locale.proto",
    "//cict/service-notification/v1:locale.proto",
    "//cict/service-notification/v1:notification.proto",
  ],
  out = "cict.descriptor",
  external_deps = [
    "well_known_protos"
  ]
)
