load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
  name = "annotations_proto",
  srcs = ["annotations.proto"],
  deps = [
    "@com_google_protobuf//:descriptor_proto",
    ":http_proto"
  ]
)

proto_library(
  name = "http_proto",
  srcs = ["http.proto"],
  deps = []
)
