load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
  name = "annotations_proto",
  srcs = ["annotations.proto"],
  deps = [
    "@com_google_protobuf//:descriptor_proto",
    "@com_google_protobuf//:field_mask_proto",
    ":enum_crud_policy_proto",
  ]
)

proto_library(
  name = "config_proto",
  srcs = ["config.proto"],
  deps = []
)

proto_library(
  name = "enum_crud_policy_proto",
  srcs = ["enum_crud_policy.proto"],
  deps = []
)

proto_library(
  name = "enum_mask_behavior_proto",
  srcs = ["enum_mask_behavior.proto"],
  deps = []
)

proto_library(
  name = "error_locale_proto",
  srcs = ["error_locale.proto"],
  deps = []
)

proto_library(
  name = "paginate_proto",
  srcs = ["paginate.proto"],
  deps = []
)
