load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
  name = "enum_authenticate_third_party_proto",
  srcs = ["enum_authenticate_third_party.proto"],
  deps = []
)

proto_library(
  name = "enum_system_role_proto",
  srcs = ["enum_system_role.proto"],
  deps = []
)

proto_library(
  name = "enum_user_status_proto",
  srcs = ["enum_user_status.proto"],
  deps = []
)

proto_library(
  name = "md_wrapper_proto",
  srcs = ["md_wrapper.proto"],
  deps = [
    ":translation_proto",
    ":user_slim_proto",
  ]
)

proto_library(
  name = "profile_proto",
  srcs = ["profile.proto"],
  deps = []
)

proto_library(
  name = "secure_proto",
  srcs = ["secure.proto"],
  deps = [
    "//google/api:annotations_proto",
    "@com_google_protobuf//:empty_proto",
    "//cict/common/v1:annotations_proto",
  ]
)

proto_library(
  name = "session_proto",
  srcs = ["session.proto"],
  deps = [
    "@go_googleapis//google/api:annotations_proto",
    "//cict/common/v1:annotations_proto",
    ":enum_system_role_proto",
    ":user_slim_proto",
  ]
)

proto_library(
  name = "translation_proto",
  srcs = ["translation.proto"],
  deps = []
)

proto_library(
  name = "user_slim_proto",
  srcs = ["user_slim.proto"],
  deps = [
    ":enum_system_role_proto",
  ],
)

proto_library(
  name = "user_proto",
  srcs = ["user.proto"],
  deps = [
    "@go_googleapis//google/api:annotations_proto",
    "@com_google_protobuf//:field_mask_proto",
    "@com_google_protobuf//:empty_proto",
    "//cict/common/v1:annotations_proto",
    "//cict/common/v1:enum_mask_behavior_proto",
    "//cict/common/v1:enum_mutate_operation_proto",
    "//cict/common/v1:paginate_proto",
    ":enum_authenticate_third_party_proto",
    ":enum_system_role_proto",
    ":enum_user_status_proto",
  ]
)
