load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
  name = "enum_scope_role_proto",
  srcs = ["enum_scope_role.proto"],
  deps = []
)

proto_library(
  name = "enum_scope_proto",
  srcs = ["enum_scope.proto"],
  deps = []
)

proto_library(
  name = "enum_user_status_proto",
  srcs = ["enum_user_status.proto"],
  deps = []
)

proto_library(
  name = "error_locale_proto",
  srcs = ["error_locale.proto"],
  deps = []
)

proto_library(
  name = "locale_proto",
  srcs = ["locale.proto"],
  deps = [
    "//cict/common/v1:error_locale_proto",
    ":error_locale_proto"
  ]
)

proto_library(
  name = "propagation_cache_proto",
  srcs = ["propagation_cache.proto"],
  deps = [
    "@com_google_protobuf//:any_proto",
    "//cict/common/v1:enum_crud_policy_proto",
    ":role_accessibility_proto",
    ":session_proto",
  ]
)

proto_library(
  name = "role_accessibility_proto",
  srcs = ["role_accessibility.proto"],
  deps = []
)

proto_library(
  name = "scope_proto",
  srcs = ["scope.proto"],
  deps = [
    "//google/api:annotations_proto",
    "@com_google_protobuf//:field_mask_proto",
    "//cict/common/v1:annotations_proto",
    "//cict/common/v1:enum_mask_behavior_proto",
    ":enum_scope_role_proto",
    ":enum_scope_proto",
  ]
)

proto_library(
  name = "session_manager_proto",
  srcs = ["session_manager.proto"],
  deps = [
    "//google/api:annotations_proto",
    "@com_google_protobuf//:field_mask_proto",
    "//cict/common/v1:annotations_proto",
    "//cict/common/v1:enum_mask_behavior_proto",
    ":role_accessibility_proto",
    ":session_proto",
  ]
)

proto_library(
  name = "session_proto",
  srcs = ["session.proto"],
  deps = [
    ":scope_proto",
    ":user_proto",
    ":workspace_user_proto",
  ]
)

proto_library(
  name = "user_proto",
  srcs = ["user.proto"],
  deps = [
    "//google/api:annotations_proto",
    "@com_google_protobuf//:empty_proto",
    "@com_google_protobuf//:field_mask_proto",
    "//cict/common/v1:annotations_proto",
    "//cict/common/v1:enum_mask_behavior_proto",
    "//cict/common/v1:enum_rpc_handle_status_proto",
    "//cict/common/v1:paginate_proto",
    ":enum_user_status_proto",
    ":scope_proto",
  ]
)

proto_library(
  name = "workspace_user_proto",
  srcs = ["workspace_user.proto"],
  deps = [
    "//google/api:annotations_proto",
    "//cict/common/v1:annotations_proto",
    "//cict/common/v1:enum_rpc_handle_status_proto",
  ]
)

proto_library(
  name = "workspace_proto",
  srcs = ["workspace.proto"],
  deps = [
    "//google/api:annotations_proto",
    "@com_google_protobuf//:empty_proto",
    "@com_google_protobuf//:field_mask_proto",
    "//cict/common/v1:annotations_proto",
    "//cict/common/v1:enum_mask_behavior_proto",
    "//cict/common/v1:enum_rpc_handle_status_proto",
    "//cict/common/v1:paginate_proto",
  ]
)
