load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
  name = "course_field_proto",
  srcs = ["course_field.proto"],
  deps = [
    "//google/api:annotations_proto",
    "@com_google_protobuf//:field_mask_proto",
    "//cict/common/v1:annotations_proto",
    "//cict/common/v1:paginate_proto",
    ":course_proto",
  ]
)

proto_library(
  name = "course_timetable_day_proto",
  srcs = ["course_timetable_day.proto"],
  deps = [
    "//google/api:annotations_proto",
    "@com_google_protobuf//:field_mask_proto",
    "//cict/common/v1:annotations_proto",
    "//cict/common/v1:paginate_proto",
  ]
)

proto_library(
  name = "course_timetable_week_proto",
  srcs = ["course_timetable_week.proto"],
  deps = [
    "//google/api:annotations_proto",
    "@com_google_protobuf//:field_mask_proto",
    "//cict/common/v1:annotations_proto",
    "//cict/common/v1:paginate_proto",
    ":course_timetable_day_proto",
  ]
)

proto_library(
  name = "course_timetable_proto",
  srcs = ["course_timetable.proto"],
  deps = [
    "//google/api:annotations_proto",
    "//cict/common/v1:annotations_proto",
    "//cict/common/v1:paginate_proto",
    ":course_timetable_day_proto",
  ]
)

proto_library(
  name = "course_proto",
  srcs = ["course.proto"],
  deps = [
    "//google/api:annotations_proto",
    "@com_google_protobuf//:empty_proto",
    "@com_google_protobuf//:field_mask_proto",
    "//cict/common/v1:annotations_proto",
    "//cict/common/v1:paginate_proto",
    ":course_timetable_week_proto",
    ":exam_schedule_proto",
    ":exam_score_proto",
  ]
)

proto_library(
  name = "exam_schedule_proto",
  srcs = ["exam_schedule.proto"],
  deps = [
    "//google/api:annotations_proto",
    "@com_google_protobuf//:field_mask_proto",
    "//cict/common/v1:annotations_proto",
    "//cict/common/v1:paginate_proto",
  ]
)

proto_library(
  name = "exam_score_proto",
  srcs = ["exam_score.proto"],
  deps = [
    "//google/api:annotations_proto",
    "@com_google_protobuf//:field_mask_proto",
    "//cict/common/v1:annotations_proto",
    "//cict/common/v1:paginate_proto",
  ]
)
