load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
  name = "registration_form_proto",
  srcs = ["registration_form.proto"],
  deps = [
    "//google/api:annotations_proto",
    "@com_google_protobuf//:field_mask_proto",
    "//cict/common/v1:annotations_proto",
    "//cict/common/v1:paginate_proto",
  ]
)

proto_library(
  name = "user_proto",
  srcs = ["user.proto"],
  deps = [
    ":registration_form_proto",
  ]
)
