load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
  name = "file_proto",
  srcs = ["file.proto"],
  deps = [
    "//google/api:annotations_proto",
    "@com_google_protobuf//:empty_proto",
    "//cict/common/v1:annotations_proto",
  ]
)

proto_library(
  name = "error_locale_proto",
  srcs = ["error_locale.proto"],
  deps = []
)

proto_library(
  name = "locale_proto",
  srcs = ["locale.proto"],
  deps = [
    "//cict/common/v1:error_locale_proto",
    ":error_locale_proto",
  ]
)
