load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
  name = "enum_kafka_topic_proto",
  srcs = ["enum_kafka_topic.proto"],
  deps = []
)

proto_library(
  name = "error_locale_proto",
  srcs = ["error_locale.proto"],
  deps = []
)

proto_library(
  name = "kafka_message_proto",
  srcs = ["kafka_message.proto"],
  deps = [
    ":enum_kafka_topic_proto",
  ]
)

proto_library(
  name = "locale_proto",
  srcs = ["locale.proto"],
  deps = [
    "//cict/common/v1:error_locale_proto",
    ":error_locale_proto",
  ]
)
