load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
  name = "enum_built_in_template_proto",
  srcs = ["enum_built_in_template.proto"],
  deps = []
)

proto_library(
  name = "error_locale_proto",
  srcs = ["error_locale.proto"],
  deps = []
)

proto_library(
  name = "locale_proto",
  srcs = ["locale.proto"],
  deps = [
    "//cict/common/v1:error_locale_proto",
    ":error_locale_proto",
  ]
)

proto_library(
  name = "mail_proto",
  srcs = ["mail.proto"],
  deps = [
    "//google/api:annotations_proto",
    "//cict/common/v1:annotations_proto",
    "//cict/common/v1:enum_rpc_handle_status_proto",
    ":enum_built_in_template_proto",
  ]
)

proto_library(
  name = "template_proto",
  srcs = ["template.proto"],
  deps = [
    "//google/api:annotations_proto",
    "@com_google_protobuf//:field_mask_proto",
    "//cict/common/v1:annotations_proto",
    "//cict/common/v1:enum_mask_behavior_proto",
    "//cict/common/v1:paginate_proto",
    ":enum_built_in_template_proto",
  ]
)
