load("@rules_proto_grpc//doc:defs.bzl", "doc_json_compile", "doc_markdown_compile")

doc_json_compile(
  name = "cict_common_v1_json_doc",
  protos = [
    "@com_github_cict_cictapis//cict/common/v1:annotations_proto",
    "@com_github_cict_cictapis//cict/common/v1:config_proto",
    "@com_github_cict_cictapis//cict/common/v1:crud_policy_proto",
    "@com_github_cict_cictapis//cict/common/v1:paginate_proto",
  ]
)

doc_markdown_compile(
  name = "cict_common_v1_markdown_doc",
  protos = [
    "@com_github_cict_cictapis//cict/common/v1:annotations_proto",
    "@com_github_cict_cictapis//cict/common/v1:config_proto",
    "@com_github_cict_cictapis//cict/common/v1:crud_policy_proto",
    "@com_github_cict_cictapis//cict/common/v1:paginate_proto",
  ]
)