load("@rules_proto_grpc//doc:defs.bzl", "doc_json_compile", "doc_markdown_compile")

doc_json_compile(
  name = "cict_service_auth_v1_json_doc",
  protos = [
    "@com_github_cict_cictapis//cict/service-auth/v1:enum_authenticate_third_party_proto",
    "@com_github_cict_cictapis//cict/service-auth/v1:enum_system_role_proto",
    "@com_github_cict_cictapis//cict/service-auth/v1:profile_proto",
    "@com_github_cict_cictapis//cict/service-auth/v1:session_proto",
    "@com_github_cict_cictapis//cict/service-auth/v1:user_proto",
  ]
)

doc_markdown_compile(
  name = "cict_service_auth_v1_markdown_doc",
  protos = [
    "@com_github_cict_cictapis//cict/service-auth/v1:enum_authenticate_third_party_proto",
    "@com_github_cict_cictapis//cict/service-auth/v1:enum_system_role_proto",
    "@com_github_cict_cictapis//cict/service-auth/v1:profile_proto",
    "@com_github_cict_cictapis//cict/service-auth/v1:session_proto",
    "@com_github_cict_cictapis//cict/service-auth/v1:user_proto",
  ]
)
