load("@rules_proto_grpc//doc:defs.bzl", "doc_json_compile", "doc_markdown_compile")

doc_json_compile(
  name = "cict_service_course_v1_json_doc",
  protos = [
    "@com_github_cict_cictapis//cict/service-course/v1:course_field_proto",
    "@com_github_cict_cictapis//cict/service-course/v1:course_timetable_day_proto",
    "@com_github_cict_cictapis//cict/service-course/v1:course_timetable_week_proto",
    "@com_github_cict_cictapis//cict/service-course/v1:course_timetable_proto",
    "@com_github_cict_cictapis//cict/service-course/v1:course_proto",
    "@com_github_cict_cictapis//cict/service-course/v1:exam_schedule_proto",
    "@com_github_cict_cictapis//cict/service-course/v1:exam_score_proto",
  ]
)

doc_markdown_compile(
  name = "cict_service_course_v1_markdown_doc",
  protos = [
    "@com_github_cict_cictapis//cict/service-course/v1:course_field_proto",
    "@com_github_cict_cictapis//cict/service-course/v1:course_timetable_day_proto",
    "@com_github_cict_cictapis//cict/service-course/v1:course_timetable_week_proto",
    "@com_github_cict_cictapis//cict/service-course/v1:course_timetable_proto",
    "@com_github_cict_cictapis//cict/service-course/v1:course_proto",
    "@com_github_cict_cictapis//cict/service-course/v1:exam_schedule_proto",
    "@com_github_cict_cictapis//cict/service-course/v1:exam_score_proto",
  ]
)
