load("@rules_proto_grpc//doc:defs.bzl", "doc_json_compile", "doc_markdown_compile")

doc_json_compile(
  name = "cict_service_dormitory_v1_json_doc",
  protos = [
    "@com_github_cict_cictapis//cict/service-dormitory/v1:registration_form_proto",
    "@com_github_cict_cictapis//cict/service-dormitory/v1:user_proto",
  ]
)

doc_markdown_compile(
  name = "cict_service_dormitory_v1_markdown_doc",
  protos = [
    "@com_github_cict_cictapis//cict/service-dormitory/v1:registration_form_proto",
    "@com_github_cict_cictapis//cict/service-dormitory/v1:user_proto",
  ]
)
